[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/dijkstra.gd" type="Script" id=1]
[ext_resource path="res://assets/mapa unifor.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.847059, 0.847059, 0, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.847059, 0.847059, 0, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.847059, 0.847059, 0.847059, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.533333, 0.533333, 0.533333, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.129412, 0.129412, 0.129412, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.4, 0.501961, 1, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="dijkstra" type="Node2D"]
script = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 141.0
margin_top = 10.0
margin_right = 915.0
margin_bottom = 68.0
text = "O VALOR AO LADO DE CADA TRAJETO INDICA O TEMPO NECESSÁRIO PARA SE DESLOCAR DE UM LOCAL PARA O OUTRO.

CLIQUE NOS BOTÕES NA MESMA SEQUÊNCIA DO CAMINHO SOLUÇÃO DO ALGORITMO DE DIJKSTRA."

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 140.0
margin_top = 68.0
margin_right = 914.0
margin_bottom = 99.0

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 140.0
margin_top = 109.0
margin_right = 893.0
margin_bottom = 585.0
texture = ExtResource( 2 )

[node name="Button0" type="Button" parent="."]
margin_left = 232.0
margin_top = 472.0
margin_right = 262.0
margin_bottom = 502.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 1 )

[node name="Button1" type="Button" parent="."]
margin_left = 264.0
margin_top = 155.0
margin_right = 294.0
margin_bottom = 185.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 1 )

[node name="Button2" type="Button" parent="."]
margin_left = 342.0
margin_top = 293.0
margin_right = 372.0
margin_bottom = 323.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 1 )

[node name="Button3" type="Button" parent="."]
margin_left = 334.0
margin_top = 465.0
margin_right = 364.0
margin_bottom = 495.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 1 )

[node name="Button4" type="Button" parent="."]
margin_left = 449.0
margin_top = 115.0
margin_right = 479.0
margin_bottom = 145.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 1 )

[node name="Button5" type="Button" parent="."]
margin_left = 485.0
margin_top = 445.0
margin_right = 515.0
margin_bottom = 475.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 1 )

[node name="Button6" type="Button" parent="."]
margin_left = 639.0
margin_top = 188.0
margin_right = 669.0
margin_bottom = 218.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 1 )

[node name="Button7" type="Button" parent="."]
margin_left = 695.0
margin_top = 360.0
margin_right = 725.0
margin_bottom = 390.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 1 )

[node name="Button8" type="Button" parent="."]
margin_left = 700.0
margin_top = 545.0
margin_right = 730.0
margin_bottom = 575.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 1 )

[node name="Button9" type="Button" parent="."]
margin_left = 826.0
margin_top = 245.0
margin_right = 856.0
margin_bottom = 275.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 1 )

[node name="Line2D1" type="Line2D" parent="."]
position = Vector2( 0, 18 )
points = PoolVector2Array( 263, 467, 333, 463 )

[node name="Line2D2" type="Line2D" parent="."]
position = Vector2( -34, -128 )
points = PoolVector2Array( 288, 551, 307, 360 )
default_color = Color( 0.4, 0.501961, 1, 1 )

[node name="Line2D3" type="Line2D" parent="."]
position = Vector2( 146, -215 )
points = PoolVector2Array( 151, 382, 318, 366 )

[node name="Line2D4" type="Line2D" parent="."]
position = Vector2( 204, 79 )
points = PoolVector2Array( 147, 384, 152, 246 )

[node name="Line2D5" type="Line2D" parent="."]
position = Vector2( 312, -97 )
points = PoolVector2Array( 56, 393, 148, 246 )

[node name="Line2D6" type="Line2D" parent="."]
position = Vector2( 319, -76 )
points = PoolVector2Array( 52, 394, 169, 523 )

[node name="Line2D7" type="Line2D" parent="."]
position = Vector2( 448, -253 )
points = PoolVector2Array( 14, 404, 191, 449 )

[node name="Line2D8" type="Line2D" parent="."]
position = Vector2( 500, -124 )
points = PoolVector2Array( 12, 572, 129, 391 )

[node name="Line2D9" type="Line2D" parent="."]
position = Vector2( 511, -71 )
points = PoolVector2Array( 3, 538, 188, 626 )

[node name="Line2D10" type="Line2D" parent="."]
position = Vector2( 582, -174 )
points = PoolVector2Array( 128, 565, 128, 672 )

[node name="Line2D11" type="Line2D" parent="."]
position = Vector2( 650, -303 )
points = PoolVector2Array( 177, 572, 93, 632 )

[node name="Line2D12" type="Line2D" parent="."]
position = Vector2( 578, -423 )
points = PoolVector2Array( 247, 679, 93, 630 )

[node name="Line2D13" type="Line2D" parent="."]
position = Vector2( 426, -174 )
points = PoolVector2Array( 269, 555, 90, 632 )

[node name="Line2D14" type="Line2D" parent="."]
position = Vector2( 482, -271 )
points = PoolVector2Array( 208, 535, 220, 602 )

[node name="Line2D15" type="Line2D" parent="."]
position = Vector2( 233, -325 )
points = PoolVector2Array( 405, 536, 136, 620 )

[node name="Line2D16" type="Line2D" parent="."]
position = Vector2( 224, -130 )
points = PoolVector2Array( 261, 602, 142, 611 )

[node name="Line2D17" type="Line2D" parent="."]
position = Vector2( 68, -284 )
points = PoolVector2Array( 274, 602, 216, 711 )

[node name="Line2D18" type="Line2D" parent="."]
position = Vector2( 73, -378 )
points = PoolVector2Array( 247, 610, 275, 672 )

[node name="Label1" type="Label" parent="."]
margin_left = 253.0
margin_top = 317.0
margin_right = 274.0
margin_bottom = 337.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 10 )
text = "2m"
valign = 1
clip_text = true

[node name="Label2" type="Label" parent="."]
margin_left = 357.0
margin_top = 151.0
margin_right = 378.0
margin_bottom = 171.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 10 )
text = "2m"
valign = 1
clip_text = true

[node name="Label3" type="Label" parent="."]
margin_left = 325.0
margin_top = 254.0
margin_right = 346.0
margin_bottom = 274.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 10 )
text = "2m"
valign = 1
clip_text = true

[node name="Label4" type="Label" parent="."]
margin_left = 304.0
margin_top = 364.0
margin_right = 325.0
margin_bottom = 384.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 10 )
text = "2m"
valign = 1
clip_text = true

[node name="Label5" type="Label" parent="."]
margin_left = 288.0
margin_top = 474.0
margin_right = 309.0
margin_bottom = 494.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 10 )
text = "2m"
valign = 1
clip_text = true

[node name="Label6" type="Label" parent="."]
margin_left = 406.0
margin_top = 209.0
margin_right = 427.0
margin_bottom = 229.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 10 )
text = "2m"
valign = 1
clip_text = true

[node name="Label7" type="Label" parent="."]
margin_left = 495.0
margin_top = 243.0
margin_right = 516.0
margin_bottom = 263.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 10 )
text = "2m"
valign = 1
clip_text = true

[node name="Label8" type="Label" parent="."]
margin_left = 417.0
margin_top = 370.0
margin_right = 438.0
margin_bottom = 390.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 10 )
text = "2m"
valign = 1
clip_text = true

[node name="Label9" type="Label" parent="."]
margin_left = 343.0
margin_top = 385.0
margin_right = 364.0
margin_bottom = 405.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 10 )
text = "2m"
valign = 1
clip_text = true

[node name="Label10" type="Label" parent="."]
margin_left = 413.0
margin_top = 468.0
margin_right = 434.0
margin_bottom = 488.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 10 )
text = "2m"
valign = 1
clip_text = true

[node name="Label11" type="Label" parent="."]
margin_left = 540.0
margin_top = 164.0
margin_right = 561.0
margin_bottom = 184.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 10 )
text = "2m"
valign = 1
clip_text = true

[node name="Label12" type="Label" parent="."]
margin_left = 563.0
margin_top = 343.0
margin_right = 584.0
margin_bottom = 363.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 10 )
text = "2m"
valign = 1
clip_text = true

[node name="Label13" type="Label" parent="."]
margin_left = 601.0
margin_top = 408.0
margin_right = 622.0
margin_bottom = 428.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 10 )
text = "2m"
valign = 1
clip_text = true

[node name="Label14" type="Label" parent="."]
margin_left = 592.0
margin_top = 499.0
margin_right = 613.0
margin_bottom = 519.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 10 )
text = "2m"
valign = 1
clip_text = true

[node name="Label15" type="Label" parent="."]
margin_left = 736.0
margin_top = 220.0
margin_right = 757.0
margin_bottom = 240.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 10 )
text = "2m"
valign = 1
clip_text = true

[node name="Label16" type="Label" parent="."]
margin_left = 687.0
margin_top = 288.0
margin_right = 708.0
margin_bottom = 308.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 10 )
text = "2m"
valign = 1
clip_text = true

[node name="Label17" type="Label" parent="."]
margin_left = 700.0
margin_top = 434.0
margin_right = 721.0
margin_bottom = 454.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 10 )
text = "2m"
valign = 1
clip_text = true

[node name="Label18" type="Label" parent="."]
margin_left = 777.0
margin_top = 289.0
margin_right = 798.0
margin_bottom = 309.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 10 )
text = "2m"
valign = 1
clip_text = true
